--- a/changelog
+++ b/changelog
@@ -1,6 +1,7 @@
 100120:
   * The layout hindered the clock to update, because of the event listening event, but it is fixed now
     made an if statement to update the layout *only* if an change really was triggered!
+  * Made some good code commenting, and cleanup.
 
 100113:
   * Fixed time counting bug..before it was jumping to 1:01 after 0:59....but not anymore :)
